fix(material-experimental/theming): align dialog with M3
Fixes up the tokens so that the dialog matches the M3 spec.

--- a/src/material-experimental/theming/_custom-tokens.scss
+++ b/src/material-experimental/theming/_custom-tokens.scss
@@ -347,6 +347,29 @@
   ));
 }
 
+/// Generates custom tokens for the dialog.
+/// @param {Map} $systems The MDC system tokens
+/// @param {Boolean} $exclude-hardcoded Whether to exclude hardcoded token values
+/// @return {Map} A set of custom tokens for the dialog
+@function dialog($systems, $exclude-hardcoded) {
+  @return (
+    container-max-width: _hardcode(560px, $exclude-hardcoded),
+    container-small-max-width: _hardcode(calc(100vw - 32px), $exclude-hardcoded),
+    container-min-width: _harcode(280px, $exclude-hardcoded),
+    actions-alignment: _hardcode(flex-end, $exclude-hardcoded),
+    content-padding: _hardcode(20px 24px, $exclude-hardcoded),
+    with-actions-content-padding: _hardcode(20px 24px 0, $exclude-hardcoded),
+    actions-padding: _hardcode(16px 24px, $exclude-hardcoded),
+
+    // The vertical padding values are a bit weird, because MDC uses a `::before` pseudo
+    // element to size the title which in turn means that we can't set a specific padding
+    // and get the exact same space out of it. These values were determined through
+    // trial and error so that the first line of text is 24px from the top and the bottom
+    // of the text is 16px from the content under it.
+    headline-padding: _hardcode(6px 24px 13px, $exclude-hardcoded),
+  );
+}
+
 /// Generates custom tokens for the mat-divider.
 /// @param {Map} $systems The MDC system tokens
 /// @param {Boolean} $exclude-hardcoded Whether to exclude hardcoded token values
